# Machine-learning-course

./: .gitignore  Lab1.ipynb  Projekt_nr_1.ipynb  README.md
Second_Part/: Projekt_nr_2.ipynb
kedro-pokemons/: .gitignore  README.md  pyproject.toml  session_store.db
kedro-pokemons/conf/base/: catalog.yml  parameters_data_science.yml
kedro-pokemons/src/kedro_pokemons/: __init__.py  __main__.py
kedro-pokemons/src/kedro_pokemons/pipelines/data_processing/: nodes.py  pipeline.py
kedro-pokemons/src/kedro_pokemons/pipelines/data_science/: nodes.py  pipeline.py
notebooks/: Projekt_nr_1.ipynb  Projekt_nr_2.ipynb  Projekt_nr_3.ipynb  Projekt_nr_4.ipynb  Projekt_nr_5.ipynb  asses_model.py  assess_model.py
